<resources>
    <string name="app_name">Islamic</string>
    <string name="logo_islamic">logo islamic</string>
    <string name="background">background</string>
    <string name="assalamu_alikum_sahabat_islamic">Assalamu’alikum, sahabat ISLAMIC</string>
    <string name="vector_home">vector home</string>
    <string name="quotes">“Aku percaya, takdir Allah pastilah yang terbaik untukku, dan untukmu juga”</string>
    <string name="asmaul_husna">Asmaul Husna</string>
    <string name="icon_menu">icon menu</string>
    <string name="wirid">Wirid</string>
    <string name="tahlil">Tahlil</string>
    <string name="doa_harian">Doa Harian</string>
    <string name="shalat">Shalat</string>
    <string name="ayat_kursi">Ayat Kursi</string>
    <string name="kitab">Kitab</string>
    <string name="kisah_nabi">Kisah Nabi</string>
    <string name="about">About</string>
    <string name="ungaran">Ungaran,</string>
    <string name="_24_september_2021">24 September 2021</string>
    <string name="hikmah_hari_ini">Quotes Hari Ini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_lainnya">Menu Lainnya</string>
    <string name="not_connected">Not Connected</string>
    <string name="pengantar_alfatihah">اِلَى حَضْرَةِ النَّبِيِّ صَلَّى اللهُ عَلَيهِ وَسَلَّمَ وَاَلِهِ وصَحْبِهِ شَيْءٌ لِلهِ لَهُمُ الْفَاتِحَةُ</string>
    <string name="alfatihah">بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ. اَلْحَمْدُ لِلهِ رَبِّ الْعَالَمِيْنَ. اَلرَّحْمَنِ الرَّحِيْمِ. مَالِكِ يَوْمِ الدِّيْنِ. اِيَّاكَ نَعْبُدُ وَاِيَّاكَ نَسْتَعِيْنُ. اِهْدِنَا الصِّرَاطَ الَّمُسْتَقِيْمَ. صِرَاطَ الَّذِ يْنَ اَنْعَمْتَ عَلَيْهِمْ غَيْرِ الْمَغْضُوْبِ عَلَيْهِمْ وَلَا الضَّالِّيْنَ. اَمِينْ</string>
    <string name="alikhlas">بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ. قُلْ هُوَ اللهُ اَحَدٌ. اَللهُ الصَّمَدُ. لَمْ يَلِدْ وَلَمْ يُوْلَدْ. وَلَمْ يَكٌنْ لَهُ كُفُوًا اَحَدٌ</string>
    <string name="tahlil_takbir">لاَ اِلَهَ اِلاَّ اللهُ وَاللهُ اَكْبَرُ</string>
    <string name="_4_tahlil_dan_takbir">4. Tahlil dan Takbir</string>
    <string name="_3_surat_al_ikhlas_3_kali">3. Surat Al-Ikhlas (3 kali)</string>
    <string name="_2_al_fatihah">2. Al-Fatihah</string>
    <string name="_1_pengantar_al_fatihah">1. Pengantar Al-Fatihah</string>
    <string name="alfalaq">بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ. قُلْ اَعُوْذُ بِرَبِّ الْفَلَقِ. مِنْ شَرِّ مَا خَلَقَ. وَمِنْ شَرِّ غَاسِقٍ اِذَا وَقَبَ. وَمِنْ شَرِّ النَّفَاثاتِ فِى الْعُقَدِ. وَمِنْ شَرِّ حَاسِدٍ اِذَا حَسَدَ</string>
    <string name="_5_surat_al_falaq_3_kali">5. Surat Al-Falaq (3 kali)</string>
    <string name="_6_tahlil_dan_takbir">6. Tahlil dan Takbir</string>
    <string name="_7_surat_an_nas">7. Surat An-Nas</string>
    <string name="annas">بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ. قُلْ اَعُوذُ بِرَبِّ النَّاسِ. مَلِكِ النَّاسِ. اِلَهِ النَّاسِ. مِنْ شَرِّ الْوَسْوَاسِ الْخَنَّاسِ. الَّذِى يُوَسْوِسُ فِى صُدُوْرِ النَّاسِ. مِنَ الْجِنَّةِ وَالنَّاسِ</string>
    <string name="_8_tahlil_dan_takbir">8. Tahlil dan Takbir</string>
    <string name="_9_awal_surat_al_baqarah">9. Awal Surat Al-Baqarah</string>
    <string name="awal_albaqarah">بِسْمِ اللهِ الرَّحْمَنِ الرَّحِيْمِ. المّ. ذَلِكَ الكِتابُ لاَرَيْبَ فِيْهِ هُدَى لِلْمُتَّقِيْنَ. الَّذِيْنَ يُؤْمِنُونَ بِالْغَيْبِ وَيُقِيْمُونَ الصَّلَاةَ وَمِمَّا رَزَقْنَاهُمْ يُنْفِقُونَ. وَالَّذِيْنَ يُؤْمِنُونَ بِمَا اُنْزِلَ اِلَيْكَ وَمَا اُنْزِلَ مِن قَبْلِكَ وَبِالْاَخِرَةِ هُمْ يُوقِنُونَ. اُولَئِكَ عَلَى هُدًى مِّن رَّبِّهِمْ، وَاُولَئِكَ هُمُ الْمُفْلِحُونَ .</string>
    <string name="_10_surat_al_baqarah_ayat_163">10. Surat Al-Baqarah ayat 163</string>
    <string name="surat_albaqarah_163">وَاِلَهُكُمْ اِلَهٌ وَّاحِدٌ لاَ اِلَهَ اِلاَّ هُوَ الرَّحْمَنُ الرَّحِيمُ</string>
    <string name="_11_ayat_kursi">11. Ayat Kursi</string>
    <string name="ayat_kursi_arab">اللهُ لاَ اِلَهَ اِلاَّ هُوَ الْحَىُّ الْقَيُّومُ، لاَ تَاْ خُذُهُ سِنَةٌ وَلاَ نَوْمٌ، لَّهُ مَا فِى السَّمَوَاتِ وَمَا فِى الْاَرْضِ، مَنْ ذَا الَّذِى يَشْفَعُ عِنْدَهُ اِلاَّ بِاِذْنِهِ، يَعْلَمُ مَا بَينَ اَيْدِيْهِمِ وَمَا خَلْفَهُمْ، وَلاَ يُحْيِطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ اِلاَّ بِمَا شَاءَ، وَسِعَ كُرْسِيُّهُ السَّمَوَاتِ وَالْاَرْضَ، وَلاَ يَئُودُهُ حِفْظُهُمُا، وَهُوَ الْعَلِىُّ الْعَظِيْمُ</string>
    <string name="_12_istigfar_3_kali">12. Istigfar (3 kali)</string>
    <string name="istigfar">اَسْتَغْفِرُاللهَ الْعَظِيْمَ</string>
    <string name="_13_tahlil_33_kali">13. Tahlil (33 kali)</string>
    <string name="tahlil_arab">اَفْضَلُ الذِّكْرِ فَاعْلَمْ اَنَّهُ لَااِلَهَ اِلَّا اللهُ، حَيٌّ مَوْجُوْدٌ</string>
    <string name="hadist_tahlil2">لَااِلَهَ اِلَّا اللهُ، حَيٌّ مَعْبُوْدٌ</string>
    <string name="hadist_tahlil3">لَااِلَهَ اِلَّا اللهُ، حَىٌّ بَاقٍ الَّذِيْ لَا يَمُوْتُ</string>
    <string name="_33_kali">(33 kali) لَااِلَهَ اِلَّا اللهُ</string>
    <string name="_14_dua_kalimat_syahadat">14. Dua Kalimat Syahadat</string>
    <string name="dua_kalimat_syahadat">لَا اِلَهَ اِلَّا اللهُ مُحَمَّدٌ رَّسُوْلُ اللهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ</string>
    <string name="_15_shalwat_nabi">15. Shalwat Nabi</string>
    <string name="shalawat_nabi">اَلَّلهُمَّ صَلِّ عَلَى سَيِّدِنَا مُحَمَّدٍ، اَلَّلهُمَّ صَلِّ عَلَيْهِ وَسَلِّمْ</string>
    <string name="shalawat_nabi2">اَلَّلهُمَّ صَلِّ عَلَى سَيِّدِنَا مُحَمَّدٍ، يَا رَبِّ صَلِّ عَلَيْهِ وَسَلِّمْ</string>
    <string name="_16_tasbih">16. Tasbih</string>
    <string name="tasbih_tahlil">سُبْحَانَ اللهِ وَبِحَمْدِهِ، سُبْحَانَ اللهِ وَبِحَمْدِهِ.* 10 سُبْحَانَ اللهِ وَبِحَمْدِهِ، سُبْحَانَ اللهِ الْعَظِيْمِ وَبِحَمْدِهِ</string>
    <string name="_17_shalawat_atas_nabi">17. Shalawat Atas Nabi</string>
    <string name="shalawat_atas_nabi">اللَّهُمَّ صَلِّ عَلَى حَبِيْبِكَ سَيِّدِنَا مُحَمَّدٍ وَعَلَى آلِهِ وَصَحْبِهِ وَسَلِّمْ *3 اَجْمَعِيْنَ</string>
    <string name="informationdoaharian">informationDoaHarian</string>
    <string name="this_image_about_avatar">this image about avatar</string>
    <string name="text_lorem_ipsump">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar elementum integer enim neque. In tellus integer feugiat scelerisque. Duis at tellus at urna condimentum mattis. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. Amet facilisis magna etiam tempor orci.</string>
    <string name="anggapamb">: @anggapamb</string>
    <string name="nomerku">: 0895 4125 79001</string>
    <string name="instagram">instagram</string>
    <string name="telegram">telegram</string>
    <string name="whatsapp">whatsapp</string>
    <string name="ayat_kursi_ar">ٱللَّهُ لَآ إِلَٰهَ إِلَّا هُوَ ٱلْحَىُّ ٱلْقَيُّومُ ۚ لَا تَأْخُذُهُۥ سِنَةٌ وَلَا نَوْمٌ ۚ لَّهُۥ مَا فِى ٱلسَّمَٰوَٰتِ وَمَا فِى ٱلْأَرْضِ ۗ مَن ذَا ٱلَّذِى يَشْفَعُ عِندَهُۥٓ إِلَّا بِإِذْنِهِۦ ۚ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ ۖ وَلَا يُحِيطُونَ بِشَىْءٍ مِّنْ عِلْمِهِۦٓ إِلَّا بِمَا شَآءَ ۚ وَسِعَ كُرْسِيُّهُ ٱلسَّمَٰوَٰتِ وَٱلْأَرْضَ ۖ وَلَا يَـُٔودُهُۥ حِفْظُهُمَا ۚ وَهُوَ ٱلْعَلِىُّ ٱلْعَظِيمُ</string>
    <string name="arti_ayat_kursi">Artinya: “Allah, tidak ada Tuhan (yang berhak disembah) melainkan Dia Yang Hidup kekal lagi terus menerus mengurus (makhluk-Nya); tidak mengantuk dan tidak tidur. Kepunyaan-Nya apa yang di langit dan di bumi. Tiada yang dapat memberi syafa\'at di sisi Allah tanpa izin-Nya? Allah mengetahui apa-apa yang di hadapan mereka dan di belakang mereka, dan mereka tidak mengetahui apa-apa dari ilmu Allah melainkan apa yang dikehendaki-Nya. Kursi Allah meliputi langit dan bumi. Dan Allah tidak merasa berat memelihara keduanya, dan Allah Maha Tinggi lagi Maha Besar.” (QS. Al Baqoroh: 255)</string>
    <string name="tidur_amp_bangun"><![CDATA[Tidur & Bangun]]></string>
    <string name="mendengar_adzan">Mendengar Adzan</string>
    <string name="masuk_amp_keluar_kamar_mandi"><![CDATA[Masuk & Keluar Kamar Mandi]]></string>
    <string name="masuk_masjid">Masuk Masjid</string>
    <string name="makan_amp_minum"><![CDATA[Makan & Minum]]></string>
    <string name="perjalanan">Perjalanan</string>
    <string name="_1_takbiratul_ihram">1. Takbiratul Ihram</string>
    <string name="takbir">أَللهُ أَكْبَر</string>
    <string name="_2_iftitah">2. Iftitah (sunnah)</string>
    <string name="iftitah">للهُ اَكْبَرْ كَبِيْرًا وَالْحَمْدُ ِللهِ كَثِيْرً وَسُبْحَانَ اللهِ بُكْرَةً وَأَصِيْلاً. أِنِّ وَجَّهْةُ وَجْهِيَ ِللذِيْ فَطَرَالسَّمَوَاتِ وَاْلآَرْضَ حَنِيِيْفًا مُسْلِمًا وَمَا أَنَا مِنَ الْمُشْرِكِيْنَ. إِنَّ صَلاَتِيْ وَنُسُكِيْ وَمْحْيَايَ وَمَمَاتِيْ ِللهِ رَبِّ الْعَالَمِيْنَ. لاَشَرِيْكَ لَهُ وَبِذَلِكَ أُمِرْتُ وَأَنَا مِنَ الْمُسْلِمِيْنَ</string>
    <string name="_3_alfatihah">3. Alfatihah</string>
    <string name="_4_membaca_surat_pendek_sunnah">4. Membaca Surat Pendek (sunnah)</string>
    <string name="_5_ruku">5. Ruku\'</string>
    <string name="rukuk">سُبْحَانَ رَبِّيَ الْعَظِيْمِ وَبِحَمْدِهِ</string>
    <string name="_6_i_tidal">6. I\'tidal</string>
    <string name="iktidal">سَمِعَ اللهُ لِمَنْ حَمِدَهُ</string>
    <string name="iktidal2">رَبَّنَا لَكَ الْحَمْدُ مِلْءَ السَّمَوَاتِ وَمِلْءَ الْأَرْضِ وَمِلْءَ مَا شِئْتَ مِنْ شَيْءٍ بَعْدُ</string>
    <string name="_7_sujud">7. Sujud</string>
    <string name="sujud">سُبْحَانَ رَبِّيَ اْلأَعْلَى وَبِحَمْدِهِ</string>
    <string name="_8_duduk_antara_2_sujud">8. Duduk Antara 2 Sujud</string>
    <string name="duduk_antara_dua_sujud">رَبِ ّاِغْفِرْلِيِ وَارْحَمْنِيْ وَارْفَعْنِيْ وَاجْبُرْنِيْ وَارْزُقْنِيْ وَاهْدِنِيْ وَعَاِفِنيْ وَاعْفُ عَنِّيْ</string>
    <string name="_9_tasyahud_awal">9. Tasyahud Awal</string>
    <string name="tasyahud_awal">التَّحِيَّاتُ الْمُبَارَكَاتُ الصَّلَوَاتُ الطَّيِّبَاتُ ِللهِ ، السَّلاَمُ عَلَيْكَ أَيُّهَا النَّبِيُّ وَرَحْمَةُ اللهِ وَبَرَكاَتُهُ السَّلاَمُ عَلَيْنَا وَعَلَى عِبَادِ اللهِ الصَّالِحِيْنَ . أَشْهَدُ أَنْ لاَ إِلَهَ إِلاَّ الله وَأَشْهَدُ أَنَّ مُحَمَّدًا رَسُوْلُ الله. اللَّهُمَّ صَلِّ عَلَى مُحَمَّد</string>
    <string name="_10_tasyahud_akhir">10. Tasyahud Akhir &amp; Doa</string>
    <string name="tasyahud_akhir_dan_doa">التَّحِيَّاتُ الْمُبَارَكَاتُ الصَّلَوَاتُ الطَّيِّبَاتُ ِللهِ ، السَّلاَمُ عَلَيْكَ أَيُّهَا النَّبِيُّ وَرَحْمَةُ اللهِ وَبَرَكاَتُهُ السَّلاَمُ عَلَيْنَا وَعَلَى عِبَادِ اللهِ الصَّالِحِيْنَ . أَشْهَدُ أَنْ لاَ إِلَهَ إِلاَّ الله وَأَشْهَدُ أَنَّ مُحَمَّدًا رَسُوْلُ الله. اللَّهُمَّ صَلِّ عَلَى مُحَمَّد وعلى آلِ مُحَمَّد كَمَا صَلَّبْتَ عَلَى إِبْرَاهِيْمَ وَعَلَى آلِ إِبْرَاهِيْمَ وَبَارِكْ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ كَمَا بَارَكْتَ عَلَى إِبْرَاهِيْمَ وَعَلَى آلِ إِبْرَاهِيْمَ فِيْ الْعَالَمِيْنَ إِنَّكَ حَمِيْدٌ مَجِيْد. اَلْلَّهُمَّ إِنِّيْ أَعُوْذُبِكَ مِنْ عَذَابِ جَهَنَّمَ وَمِنْ عَذَابِ القَبْرِ وَمِنْ فِتْنَةِ المَحْيَا وَالمَمَاتِ وَمِنْ شَرِّ فِتْنَةِ المَسِيْحِ الدَجَّالِ.</string>
    <string name="_11_salam">11. Salam</string>
    <string name="salam">اَلسَّلاَمُ عَلَيْكُمْ وَرَحْمَةُ الله</string>
</resources>