<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/greyColor"
    android:orientation="vertical"
    tools:context=".activity.TahlilActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_tahlil"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_back"
        app:title="Tahlil"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_pengantar_al_fatihah"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengantar_alfatihah"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_al_fatihah"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alfatihah"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_surat_al_ikhlas_3_kali"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alikhlas"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_tahlil_dan_takbir"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahlil_takbir"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_surat_al_falaq_3_kali"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alfalaq"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6_tahlil_dan_takbir"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahlil_takbir"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_surat_an_nas"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annas"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8_tahlil_dan_takbir"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahlil_takbir"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9_awal_surat_al_baqarah"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awal_albaqarah"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_surat_al_baqarah_ayat_163"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surat_albaqarah_163"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_ayat_kursi"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ayat_kursi_arab"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_istigfar_3_kali"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/istigfar"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13_tahlil_33_kali"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tahlil_arab"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hadist_tahlil2"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hadist_tahlil3"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_33_kali"
                android:layout_marginStart="@dimen/_40sdp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_14_dua_kalimat_syahadat"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dua_kalimat_syahadat"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_15_shalwat_nabi"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shalawat_nabi"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shalawat_nabi2"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_16_tasbih"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tasbih_tahlil"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_17_shalawat_atas_nabi"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shalawat_atas_nabi"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>